# krompir

./: .clang-format  .clang-tidy  .codespellrc  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  README_8md.html  Taskfile.yml  about.html  about_8dox.html  annotated.html  conanfile.py  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespaces.html  pages.html  requirements.txt  searchdata-v1.js
.github/workflows/: ci.yml  update-submodules.yml
cmake/: PatchFile.cmake  dev-mode.cmake  docs.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile.in  conf.py.in
misc/: krompir.rc
misc/xpm/: krompir_128.xpm  krompir_16.xpm  krompir_256.xpm  krompir_32.xpm  krompir_64.xpm  krompir_8.xpm
source/: lib.cpp
src/: common.hpp  config.h.in  lib.cpp  logging.cpp  logging.hpp  main.cpp
src/gui/: constants.hpp  gui.cpp  gui.hpp  icons.cpp  icons.hpp  utils.hpp
src/gui/frames/: main.cpp  main.hpp
src/utils/: #gui.hpp#  gui.hpp  utils.hpp
test/: CMakeLists.txt
test/source/: krompir_test.cpp
test/src/: krompir_test.cpp
